--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Bất phương trình bậc 2</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link href="quadratic.css" rel="stylesheet" type="text/css">
+    <link href="decoration.css" rel="stylesheet" type="text/css">
   </head>
   
   <body>
@@ -31,6 +31,6 @@
   </div>
   </div>
 
-    <script src="quadratic.js"></script>
+    <script src="math.js"></script>
   </body>
 </html>
